ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jira-to-code
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nycbasecamper.michaeljames.dev
      secretName: jira-to-code-cert
  rules:
    - host: nycbasecamper.michaeljames.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jira-to-code
                port:
                  number: 80
